fix: update max-width too small issue on captioned images at small mobile screen sizes

--- a/src/sass/_mobile-small.scss
+++ b/src/sass/_mobile-small.scss
@@ -165,7 +165,7 @@ html.rqf-page {
       .right,
       .left,
       .captionedimage {
-        max-width:30%;
+
         // !important to override inline styles
         width:auto !important;
         img:not(.icon) {
